--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,21 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+joblib = "==1.0.1"
+kiwisolver = "==1.3.1"
+matplotlib = "==3.3.4"
+numpy = "==1.20.1"
+pygame = "==2.0.1"
+pyparsing = "==2.4.7"
+python-dateutil = "==2.8.1"
+scikit-learn = "==0.24.1"
+scipy = "==1.6.1"
+six = "==1.15.0"
+threadpoolctl = "==2.1.0"
+tqdm = "==4.58.0"
+Cycler = "==0.10.0"
+Pillow = "==8.1.0"
+lightgbm = "==3.1.1"
 
 [dev-packages]
 
